# capsbench

./: .gitignore  Dockerfile  Dockerfile.green  Dockerfile.purple  LICENSE  README.md  docker-compose.yml  generate_compose.py  pyproject.toml  scenario.toml  universal_replayer.py
.github/workflows/: inspect-image.yml  publish-image.yml  publish.yml  run-scenario.yml
src/: capsicaps_env.py  game_logic.py  green_agent.py
src/capsbench/: capsicaps_env.py  game_logic.py  green_agent.py  universal_replayer.py
visualizer/: app.js  index.html  style.css
