[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capsbench"
version = "1.0.0"
description = "Caps i Caps: A Neuro-Symbolic Reasoning Benchmark for AI Agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "STAR-XAI Team", email = "capsicaps.game@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "gymnasium>=0.29.0",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "google-genai>=0.3.0"
]

[project.urls]
Homepage = "https://github.com/star-xai-protocol/capsbench"
Repository = "https://github.com/star-xai-protocol/capsbench"

[tool.hatch.build.targets.wheel]
packages = ["src/capsbench"]